Vertical spacing (CSS styling fix)

--- a/www/src/components/notebook/notebook.module.scss
+++ b/www/src/components/notebook/notebook.module.scss
@@ -3,7 +3,6 @@
   height: 100%;
 
   textarea {
-    height: 100%;
     flex: 1;
     border: none;
     resize: none;
