--- a/www/src/styles.scss
+++ b/www/src/styles.scss
@@ -133,7 +133,8 @@ body {
 
 html,
 body,
-#root {
+#root, 
+#__next {
   height: 100%;
 }
 
